Revision history for Test-BrewBuild

2.23 UNREL
        -

2.22    2019-10-19
        - added timestamp() to BrewBuild, exact code copy from Logging::Simple
        - Dispatch now creates bblog output file with a timestamp appended so
          that we can maintain multiple fail/pass logs for review
        - fix issue in Git where in some cases, we'd fail looking up a repo,
          but weren't receiving any errors. This rendered tests to fail, but the
          process to proceed (fixes #247)
        - fix issue when using "-c brewbuild -o ver" with a single version (with
          bbdispatch -c "bb -o" or just plain "brewbuild"), results weren't
          being returned properly (fixes #246)
        - --notest for brewbuild is now disabled in the default config file
        - bbdispatch --tester now defaults to 127.0.0.1 if not supplied, via the
          config file (closes #248)
        - modify warning and die() if in dispatch auto mode and a tester isn't
          available (closes #234)
        - dispatcher is now properly informed if a repo is invalid, and the
          testers continue to run as opposed to croaking (fixes #251)

2.21    2019-06-07
        - modified text in dispatch auto mode LCD output (closes #233)
        - Dispatch auto() now logs at startup how many seconds between each test
          run (closes #238)
        - removed a debug print line from Dispatch::auto()'s LCD output
          (closes #244)
        - fix issue in brew_info tests where perlbrew added non-conforming
          versions in 'perlbrew available'
        - in BC::installed() we now croak if the proper params not sent in
        - if only one Perl is installed, we now check to ensure we have the
          perl version header in the results, if not, we add it (fixes #241)
        - if we're using LCD output and the LCD is 4 row by 20 col, display the
          number of test failures (closes #235)
        - add troubleshooting section in POD to inform how to proceed if